Added hostname to instances view

--- a/frontend/src/style/table.less
+++ b/frontend/src/style/table.less
@@ -16,6 +16,7 @@
       width: 19%;
       background-color: @white;
       padding-right: 30px;
+      
 
       &:nth-child(4) {
         width: 15%;
@@ -27,6 +28,16 @@
 
       &.coreRollerTable-cell--mini {
         width: 5%;
+
+        .cr-button {
+          margin-left: 0px;
+          margin-top: 8px;
+        }
+      }
+
+      &.coreRollerTable-cell--small {
+        overflow: hidden;
+        width: 8.5%;
 
         .cr-button {
           margin-left: 0px;
